# organ-masker-lite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: run-record.md
specs/001-ome-zarr-sam-masking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-input-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-bundled-ome-zarr-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/organ_masker_lite/: __init__.py  __main__.py  api.py  cli.py  config.py  input_log.py  interactive.py
tests/: conftest.py
tests/contract/: test_cli_mask.py  test_python_api.py
tests/integration/: test_api_cli_parity.py  test_backend_comparison.py  test_engine_smoke.py  test_log_api.py  test_log_besteffort.py  test_log_cli.py  test_log_cli_failure.py  test_log_cli_runid.py  test_log_options.py  test_log_prompts_cli.py  test_log_stdout_clean.py  test_us1_box.py  test_us1_exclusion.py  test_us1_sam2_smoke.py  test_us1_single_point.py  test_us2_bidirectional.py  test_us2_multiaxis.py  test_us3_level_speed.py  test_us3_levels.py  test_us5_postprocess.py  test_us6_interactive.py
tests/performance/: test_benchmark.py  test_log_overhead.py  test_validate_perf.py
tests/unit/: test_combine.py  test_config.py  test_frames.py  (+9 more)
(+21 files in other folders)
